[gd_scene load_steps=8 format=3 uid="uid://emicyb4jpcak"]

[ext_resource type="Texture2D" uid="uid://ln2nth0chg12" path="res://tsc/i (1).png" id="1_f50pn"]
[ext_resource type="Script" uid="uid://c22287t30upru" path="res://screpst/character_body_2d.gd" id="1_ij6vw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ij6vw"]
radius = 14.0
height = 66.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ghijl"]
radius = 2563.0564

[sub_resource type="Animation" id="Animation_ij6vw"]
resource_name = "take_damaga"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.9843137, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ghijl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_44cfe"]
_data = {
&"RESET": SubResource("Animation_ghijl"),
&"take_damaga": SubResource("Animation_ij6vw")
}

[node name="enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_ij6vw")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.111, 0.083)
texture = ExtResource("1_f50pn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_ij6vw")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ghijl")

[node name="take_dameg" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_44cfe")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
